# edge-llm-guardian

./: .gitignore  DECISIONS.md  README.md  config.example.json  config.m2.fan_on.example.json  config.m2.fan_on.predictive.dwell.example.json  config.m2.fan_on.predictive.example.json  m2.example.json  pyproject.toml
docs/: evidence_log.md  findings_lookahead.md  m0_checklist.md  m1_checklist.md  m2_checklist.md  m2_full_fan_on_n5_results.md  m2_full_protocol.md  m2_lite_completion.md  m3_thermal_stress_protocol.md
scripts/: analyze_min_residence_tradeoff.py  fake_llama_server.py  run_m3_thermal_continuity_protocol.py
src/edge_llm_guardian/: m2.py  router.py
src/thermal_guardian/: config.py  controller.py  router.py
tests/: test_config.py  test_controller.py  test_logger.py  test_m0.py  test_m1.py  test_m2.py  test_monitor.py  test_router.py
