[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-llm-guardian"
version = "0.1.0"
description = "Thermal-aware Q8/Q4 LLM router scaffold for Raspberry Pi 5."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.31",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
edge-llm-router = "edge_llm_guardian.router:main"
edge-llm-m0 = "edge_llm_guardian.m0:main"
edge-llm-m1 = "edge_llm_guardian.m1:main"
edge-llm-m2 = "edge_llm_guardian.m2:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
